# wshooks

./: .env.example  Cargo.toml
prisma/: schema.prisma
prisma-cli/: Cargo.toml
src/: auth.rs  errors.rs  main.rs  prisma.rs  resource.rs
src/auth/: claims.rs  http.rs  mod.rs
src/resource/: http.rs
src/topic/: http.rs
src/ws/: mod.rs
