[package]
name = "wshooks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.4", features = ["ws", "headers"] }
futures = { version = "0.3.25" }
futures-util = { version = "0.3.25", default-features = false, features = ["sink", "std"] }
headers = "0.3.8"
tokio = { version = "1.24.2", features = ["full"] }
tokio-tungstenite = "0.18.0"
tower-http = { version = "0.3.5", features = ["fs", "trace"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.4", default-features = false, features = ["postgresql"] }
serde = "1.0.152"
dotenv = "0.15.0"
jsonwebtoken = "8.2.0"
serde_json = "1.0.91"
once_cell = "1.17.0"
validator = { version = "0.16.0", features = ["derive"] }
rust-argon2 = "1.0.0"
uuid = { version = "1.2.2", features = ["v4"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
nanoid = "0.4.0"


[workspace]
members = [
    "prisma-cli"
]
